--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ a {
 	height: 100%;
 }
 
+section {
+	padding: 4% 0;
+}
+
 .container {
 	margin: 0 auto;
 	width: 85%;
@@ -89,15 +93,21 @@ a {
 	margin: 20px 0;
 }
 
+.subheading {
+	font-size: 30px;
+	color: #4a90e2;
+}
+
 p {
 	color: #666;
 	font-size: 16px;
 	line-height: 1.75em;
-	margin: 0 0 40px 0;
 }
 
 .primary-btn {
+	margin-top: 10px;
 	color: white;
+	display: inline-block;
 	background-color: #4a90e2;
 	border: none;
 	font-size: 18px;
@@ -129,4 +139,51 @@ p {
 	flex-direction: column;
 	flex-basis: 100%;
 	flex: 1;
+}
+
+.card {
+	padding: 30px 20px;
+	border-radius: 20px;
+	margin-right: 30px;
+	box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.027);
+}
+
+/* Contact form */
+/* Style inputs with type="text", select elements and textareas */
+input[type=text],
+input[type=number],
+select,
+textarea {
+	width: 100%; /* Full width */
+	padding: 12px; /* Some padding */
+	border: 1px solid #ccc; /* Gray border */
+	border-radius: 4px; /* Rounded borders */
+	box-sizing: border-box; /* Make sure that padding and width stays in place */
+	margin-top: 6px; /* Add a top margin */
+	margin-bottom: 16px; /* Bottom margin */
+	resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+	background-color: #4a90e2;
+	color: white;
+	padding: 12px 30px;
+	border: none;
+	font-size: 15px;
+	letter-spacing: 1px;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+	background-color: #5a9be6;
+}
+
+.diagonal-content {
+	background: #f8f8f8;
+	color: white;
+	clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
+	padding: 10rem 4%;
 }
