--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ body {
 .header {
 	width: 100%;
 	padding: 5px;
-	text-align: center;
+	text-align: left;
 	position: fixed;
-	background-color: white;
+	background: hsla(0, 0%, 100%, .95);
 	z-index: 99999;
-	border-bottom: 0.3px solid rgba(102, 102, 102, 0.308);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, .05);
 }
 
 .header-dot {
@@ -38,9 +38,15 @@ body {
 	line-height: 7vh;
 }
 
+.header-socials {
+	float: right;
+	padding: 0 !important;
+	margin-left: 20px;
+}
+
 .header-nav li {
 	display: inline;
-	padding: 15px 10px;
+	padding: 15px 30px;
 }
 
 a {
@@ -49,11 +55,18 @@ a {
 }
 
 .header-nav a {
-	color: #242424;
-	font-weight: 600;
-	font-size: 14px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
+	color: #656470;
+	font-weight: 500;
+	font-size: 17px;
+	letter-spacing: 1px;
+	padding-bottom: 20px;
+	transition: 200ms ease;
+	border-bottom: 4px solid transparent;
+}
+
+.header-nav a:hover {
+	color: #4a90e2;
+	border-bottom: 4px solid #4a90e2;
 }
 
 .header-nav a:after {
@@ -68,14 +81,18 @@ a {
 	transition: width 0.3s ease 0s, left 0.3s ease 0s;
 	width: 0;
 }
+
 .header-nav a:hover:after {
 	width: 100%;
 	left: 0;
 }
 
 .logo-header {
-	float: left;
-	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 98%;
+	line-height: 7vh;
 }
 
 section {
@@ -112,9 +129,10 @@ p {
 	border: none;
 	font-size: 18px;
 	border-radius: 20px;
-	padding: 10px 40px;
+	padding: 12px 45px;
 	letter-spacing: 1px;
 	transition: 200ms smooth;
+	box-shadow: 0 0 15px 5px #0000000f;
 }
 
 .primary-btn:hover {
@@ -122,7 +140,7 @@ p {
 }
 
 #home {
-	padding: 15% 0;
+	padding: 13% 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -164,6 +182,13 @@ textarea {
 	resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
+input:focus,
+textarea:focus {
+	box-shadow: 0 0 12px 5px #4a91e221 !important;
+	border: 1px solid #4a91e28a;
+	outline: none;
+}
+
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
 	background-color: #4a90e2;
@@ -174,6 +199,8 @@ input[type=submit] {
 	letter-spacing: 1px;
 	border-radius: 4px;
 	cursor: pointer;
+	transition: 200ms smooth;
+	box-shadow: 0 0 15px 5px #0000000f;
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
@@ -186,4 +213,24 @@ input[type=submit]:hover {
 	color: white;
 	clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
 	padding: 10rem 4%;
+}
+
+footer {
+	text-align: center;
+	background-color: #242424;
+	padding: 30px 40px;
+}
+
+.socials {
+	padding: 0;
+}
+
+.socials li {
+	display: inline;
+}
+
+.socials a {
+	color: white;
+	font-size: 22px;
+	padding: 0 20px;
 }
