--- a/style.css
+++ b/style.css
@@ -208,6 +208,19 @@ input[type=submit]:hover {
 	background-color: #5a9be6;
 }
 
+label {
+	text-transform: uppercase;
+	font-weight: 550;
+	font-size: 14px;
+	letter-spacing: 1px;
+	color: #666;
+}
+
+.required-form {
+	font-size: 16px;
+	color: red;
+}
+
 .diagonal-content {
 	background: #f8f8f8;
 	color: white;
