--- a/style.css
+++ b/style.css
@@ -331,6 +331,10 @@ footer {
 	.card {
 		margin: 30px 0;
 	}
+
+	.illustration-img{
+		width: 100% !important;
+	}
 }
 
 @media (max-width: 1100px) {
@@ -352,4 +356,9 @@ footer {
 	height: auto;
 	max-height: 350px;
 	box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.103);
+}
+
+.illustration-img{
+	float: right;
+	width: 92%;
 }
