--- a/style.css
+++ b/style.css
@@ -281,14 +281,19 @@ footer {
 }
 
 .topnav a.icon {
-	color: #242424;
-	font-size: 22px;
-	line-height: 3vh;
-	margin-right: 15px;
-	display: block;
-	position: absolute;
-	right: 0;
-	top: 0;
+    color: #242424;
+    font-size: 22px;
+    margin-right: 20px;
+    display: block;
+    position: absolute;
+    line-height: 7vh;
+    right: 0;
+    padding: 0;
+    top: 0;
+}
+
+.logo-link{
+	display: inline-block !important;
 }
 
 /* Mobile responsive media queries */
