--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 
 a {
 	color: blue;
-	text-decoration: none; /* no underline */
+	text-decoration: none; 
 }
 
 .header-nav a {
@@ -89,7 +89,7 @@ a {
 
 .logo-header {
 	position: absolute;
-	left: 0;
+	margin-left: -30px;
 	top: 0;
 	height: 98%;
 }
@@ -112,6 +112,10 @@ section {
 .subheading {
 	font-size: 30px;
 	color: #4a90e2;
+}
+
+.landing-paragraph{
+	font-size: 20px;
 }
 
 p {
@@ -139,7 +143,7 @@ p {
 }
 
 #home {
-	padding: 13% 0;
+	padding: 10% 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -152,7 +156,7 @@ p {
 	width: 100%;
 }
 
-.column {
+.column, .review-content {
 	flex-direction: column;
 	flex-basis: 100%;
 	flex: 1;
@@ -160,12 +164,28 @@ p {
 
 .card {
 	padding: 30px 20px;
+	transition: 200ms ease-in-out;
 	border-radius: 20px;
 	margin-right: 30px;
 	box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.027);
 }
 
-/* Contact form */
+.img-icon{
+	transition: 200ms ease-in-out;
+	opacity: 0.7;
+}
+
+.card-hover:hover{
+	margin-top: -5px;
+	box-shadow: 0 0 15px 8px rgba(0, 0, 0, 0.027);
+}
+
+.card-hover:hover .img-icon{
+	transform: scale(1.05);
+	opacity: 1;
+}
+
+
 /* Style inputs with type="text", select elements and textareas */
 input[type=text],
 input[type=number],
@@ -189,7 +209,7 @@ textarea:focus {
 }
 
 /* Style the submit button with a specific background color etc */
-input[type=submit] {
+input[type=submit], .btn-project {
 	background-color: #4a90e2;
 	color: white;
 	padding: 12px 30px;
@@ -198,12 +218,14 @@ input[type=submit] {
 	letter-spacing: 1px;
 	border-radius: 4px;
 	cursor: pointer;
+	display: inline-block;
 	transition: 200ms smooth;
 	box-shadow: 0 0 15px 5px #0000000f;
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
+input[type=submit]:hover,
+.btn-project:hover {
 	background-color: #5a9be6;
 }
 
@@ -229,7 +251,8 @@ label {
 
 footer {
 	text-align: center;
-	background-color: #242424;
+	background-color: #fafbfc;
+	color: #959da5;
 	padding: 30px 40px;
 }
 
@@ -242,7 +265,7 @@ footer {
 }
 
 .socials a {
-	color: white;
+	color: #959da5;
 	font-size: 22px;
 	padding: 0 20px;
 }
@@ -297,7 +320,7 @@ footer {
 }
 
 /* Mobile responsive media queries */
-@media (max-width: 767px) {
+@media (max-width: 800px) {
 	h1 {
 		font-size: 38px !important;
 		line-height: 1.5em;
@@ -340,12 +363,15 @@ footer {
 	.illustration-img{
 		width: 100% !important;
 	}
+
+	.container{
+		width: 90%;
+	}
 }
 
 @media (max-width: 1100px) {
 	.row {
 		display: inline-block !important;
-		margin-right: -80%;
 	}
 
 	#about-img {
@@ -366,4 +392,81 @@ footer {
 .illustration-img{
 	float: right;
 	width: 92%;
+}
+
+.project-top{
+	width: 100%;
+	height:200px;
+	margin: 0;
+	padding: 0;
+	border-bottom: 3px solid rgba(128, 128, 128, 0.11);
+}
+
+.project-card{
+	border-radius: 18px;
+    box-shadow: 0 6px 20px rgba(56, 126, 255, 0.103) !important;
+    transition: all .2s ease-in-out;
+    background: #fff;
+}
+
+.project-top img{
+	height: 100%;
+	width: 100%;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+
+#projects-row-1 .card{
+	padding: 0;
+	border: 3px solid rgba(128, 128, 128, 0.11);
+}
+
+.project-bottom{
+	padding: 20px !important;
+}
+
+.project-bottom i{
+	margin-left: 5px;
+	font-size: 16px;
+}
+
+.project-type{
+	padding: 0.6em 1em;
+    background-color: #242424bf;
+	color: white;
+	border-radius: 20px;
+	font-size: 12px;
+	font-weight: 500;
+	float: right;
+}
+
+#reviews{
+	background-color: #242424;
+	text-align: center;
+}
+
+.review-content{
+ 	padding: 10px 25px;
+}
+
+#reviews .heading{
+	color: white !important;
+}
+
+#reviews .header-dot{
+	color: #5a9be6 !important;;
+}
+
+.review-author{
+	font-size: 15px;
+	color: #ccc;
+}
+
+.review-logo{
+	border-radius: 50%;
+	border: 2px solid #ccc;
+	display: inline;
+	height: 30px;
+	padding: 2px;
+	width: 30px;
 }
